# py-ml-pt-regression

./: CHANGELOG.md  README.md  README.zh-CN.md  main.py  pyproject.toml
app/: __init__.py  plot.py  table.py
models/: model.pth
ui/: home.py
utils/: PT.py  __init__.py  config.py  decorator.py  helper.py  highlighter.py  models.py  predictor.py  stats.py  trainer.py
